logs/Slang/generic/class/class_test_42.sv.log
name: class_test_42
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_42.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_42.sv:7:1: error: language feature not yet supported
class macros_as_class_item;
^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_42.sv:8:2: error: unknown macro or compiler directive '`uvm_object_utils_begin'
 `uvm_object_utils_begin(foobar)
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_42.sv:9:2: error: unknown macro or compiler directive '`uvm_object_utils'
 `uvm_object_utils(blah)
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_42.sv:10:2: error: unknown macro or compiler directive '`uvm_object_utils_end'
 `uvm_object_utils_end
 ^
